@@ -19,12 +19,11 @@
     </text>
   </lang>
   <autodetect>
-    <general>
-      <ieee1284>MFG:Hewlett-Packard;MDL:PSC 2400 Series;CMD:MLC,PCL,PML,DW-PCL,DYN;CLS:PRINTER;</ieee1284>
-      <commandset>MLC,PCL,PML,DW-PCL,DYN</commandset>
-      <manufacturer>Hewlett-Packard</manufacturer>
-      <model>PSC 2400 Series</model>
-    </general>
+    <usb>
+      <commandset>MLC,PCL,PML,DW-PCL</commandset>
+      <manufacturer>hp</manufacturer>
+      <model>psc 2400 series</model>
+    </usb>
   </autodetect>
   <functionality>A</functionality>
   <driver>hplip</driver>
