@@ -1,3 +1,8 @@
+2010-04-16  Tim Waugh <twaugh@redhat.com>
+
+	* db/source/printer/HP-PSC_2400.xml: Corrected IEEE 1284
+	  Device ID (RH bug #188419).
+
 2010-03-26  Tim Waugh <twaugh@redhat.com>
 
 	* db/source/printer/HP-PhotoSmart_2570.xml: Corrected IEEE
